[package]
name = "infocom"
version = "0.1.0"
authors = ["zirujauak <evan.day@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.16.0" }
uuid = { version = "0.8.1", features = ["v4"] } 
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-service = "1.0.5"
listenfd = "0.3.3"
serde = "1.0.110"
serde_json = "1.0.53"
log = "0.4.8"
simple_logger = "1.6.0"
futures = "0.3.5"
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
easycurses = "0.13.0"