[package]
name = "infocom"
version = "0.1.0"
authors = ["zirujauak <evan.day@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
easycurses = "0.13.0"